--- a/TDD/TDD.csproj
+++ b/TDD/TDD.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AddStudentForm.Designer.cs">
       <DependentUpon>AddStudentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Student.cs" />
     <Compile Include="StudentViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
