--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="SortTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CalcAvgTest.cs" />
   </ItemGroup>
